force-app/main/default/objects/Maintenance__c/fields/Actual_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_date__c</fullName>
    <label>Actual date</label>
    <type>Date</type>
</CustomField>