force-app/main/default/objects/Maintenance__c/fields/Expected_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_date__c</fullName>
    <label>Expected date</label>
    <type>Date</type>
</CustomField>