force-app/main/default/objects/Maintenance__c/fields/Maintain_Status__c.field-meta.xml
<CustomField>
    <fullName>Maintain_Status__c</fullName>
    <label>Maintain Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Serviced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>