force-app/main/default/objects/Maintenance__c/fields/PIC_User__c.field-meta.xml
<CustomField>
    <fullName>PIC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>